# JQChat-client

./: .gitignore  CMakeLists.txt  build.bat  build.ps1
resources/: jqchat.rc  resources.qrc
resources/qss/: global.qss  login.qss  main.qss
src/: main.cpp
src/app/: application.cpp  application.h
src/cache/: database.cpp  database.h  image_cache.cpp  image_cache.h
src/models/: friend_model.cpp  friend_model.h  message_model.cpp  message_model.h  user_model.cpp  user_model.h
src/network/: api_manager.cpp  api_manager.h  http_client.cpp  http_client.h  proto.h  ws_client.cpp  ws_client.h
src/utils/: avatar_loader.cpp  avatar_loader.h  config.cpp  config.h  credential_store.cpp  credential_store.h  image_utils.cpp  image_utils.h  logger.cpp  logger.h
src/viewmodels/: chat_viewmodel.cpp  chat_viewmodel.h  contact_viewmodel.cpp  contact_viewmodel.h  login_viewmodel.cpp  login_viewmodel.h  setting_viewmodel.cpp  setting_viewmodel.h
src/views/: main_window.cpp  main_window.h
src/views/chat/: chat_input.cpp  chat_input.h  chat_window.cpp  chat_window.h  emoji_picker.cpp  emoji_picker.h  message_item.cpp  message_item.h
src/views/contact/: add_friend_dialog.cpp  add_friend_dialog.h  contact_list.cpp  contact_list.h  friend_request_list.cpp  friend_request_list.h
src/views/login/: login_widget.cpp  login_widget.h
src/views/setting/: setting_dialog.cpp  setting_dialog.h
src/widgets/: crop_avatar_dialog.cpp  crop_avatar_dialog.h  popup_notify.cpp  popup_notify.h  rounded_image.cpp  rounded_image.h  title_bar.cpp  title_bar.h  tray_icon.cpp  tray_icon.h
